--- a/.gitignore
+++ b/.gitignore
@@ -41,3 +41,9 @@ $RECYCLE.BIN/
 Network Trash Folder
 Temporary Items
 .apdisk
+bin/Debug/ControleEscolar.exe
+*.cbp
+ControleEscolar.depend
+*.layout
+obj/Debug/estruturas.o
+*.o
